<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/chat_server_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/chat_server_text"
        android:inputType="textUri"
        style="@style/textNormal"/>

    <EditText
        android:id="@+id/chat_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/chat_name_text"
        android:inputType="textPersonName"
        style="@style/textNormal"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/register_label"
        style="@style/textButton"/>

</LinearLayout>